# Stockbot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: logging_config.py  settings.py  strategies.yaml  symbols.yaml
scripts/: run_backtest.py  run_bot.py  run_dashboard.py  seed_historical_data.py
stockbot/: __init__.py
stockbot/agents/: __init__.py  graph.py  llm.py  market_analyst.py  portfolio_manager.py  risk_manager.py  state.py
stockbot/agents/prompts/: market_analyst.md  portfolio_manager.md  risk_manager.md
stockbot/agents/tools/: broker_tools.py  risk_tools.py  sentiment.py  technical_analysis.py
stockbot/backtesting/: __init__.py  comparison.py  engine.py  metrics.py  report.py  simulator.py
stockbot/broker/: __init__.py  account.py  client.py  orders.py  positions.py  streams.py
stockbot/dashboard/: app.py
stockbot/dashboard/pages/: agents.py  backtest.py  (+3 more)
stockbot/data/: __init__.py  cache.py  features.py  market_data.py  news.py  storage.py
stockbot/db/: __init__.py  models.py  session.py
stockbot/engine/: __init__.py  event_bus.py  runner.py  scheduler.py
stockbot/strategies/: __init__.py  base.py  composite.py  mean_reversion.py  momentum.py
stockbot/utils/: decorators.py  formatters.py  market_hours.py
tests/: conftest.py
tests/test_agents/: test_state.py  test_tools.py
tests/test_backtesting/: test_metrics.py  test_simulator.py
tests/test_broker/: test_account.py  test_orders.py
tests/test_data/: test_cache.py  test_features.py  test_storage.py
tests/test_engine/: test_event_bus.py
